--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,4 +2,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  width: 100%;
+  height: 100%;
+}
+
+#map {
+  margin-top: 50px;
+  width: 300px;
+  height: 300px;
 }
